--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <button onclick="insta.swiper.stop()">stop</button>
 
 
-    <script src="./build/build.min.js"></script>
+    <script src="./build/build.js"></script>
     <script>
         var slider = require('fluid-slider');
         var el = document.getElementById('js-swipe');
