--- a/test/index.html
+++ b/test/index.html
@@ -53,6 +53,7 @@
       }
 
     </style>
+    <link rel="stylesheet" href="./mocha.css" />
   </head>
   <body>
     <div id="container">
@@ -82,9 +83,11 @@
       </ul>
     </div>
 
+    <div id="mocha"></div>
     <script src="../build/build.js"></script>
+    <script src="./chai.js"></script>
     <script>
-      var assert = require('assert');
+      var assert = chai.assert;
       var slider = require('fluid-slider');
       var el = document.getElementById('slider');
       var s = slider(el);
