rename css classes

--- a/example/index.html
+++ b/example/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width">
   </head>
   <body>
-    <div class="swipe-container">
-      <ul id="js-swipe" class="swipe-list">
-        <li class="swipe-item"><img src='http://distilleryimage5.ak.instagram.com/17673070b8b211e2a58222000a1fb810_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage11.ak.instagram.com/59ca3f72926811e2ba9922000a1f9c9a_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage4.s3.amazonaws.com/2e548db0b5a011e2968922000a1fbe74_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage3.s3.amazonaws.com/8fc405729f9711e2b17a22000a1fa432_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage5.ak.instagram.com/17673070b8b211e2a58222000a1fb810_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage11.ak.instagram.com/59ca3f72926811e2ba9922000a1f9c9a_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage4.s3.amazonaws.com/2e548db0b5a011e2968922000a1fbe74_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage3.s3.amazonaws.com/8fc405729f9711e2b17a22000a1fa432_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage5.ak.instagram.com/17673070b8b211e2a58222000a1fb810_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage11.ak.instagram.com/59ca3f72926811e2ba9922000a1f9c9a_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage4.s3.amazonaws.com/2e548db0b5a011e2968922000a1fbe74_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage3.s3.amazonaws.com/8fc405729f9711e2b17a22000a1fa432_7.jpg' /></li>
-        <li class="swipe-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
+    <div class="FluidSlider-container">
+      <ul id="js-FluidSlider" class="swipe-list">
+        <li class="FluidSlider-item"><img src='http://distilleryimage5.ak.instagram.com/17673070b8b211e2a58222000a1fb810_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage11.ak.instagram.com/59ca3f72926811e2ba9922000a1f9c9a_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage4.s3.amazonaws.com/2e548db0b5a011e2968922000a1fbe74_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage3.s3.amazonaws.com/8fc405729f9711e2b17a22000a1fa432_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage5.ak.instagram.com/17673070b8b211e2a58222000a1fb810_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage11.ak.instagram.com/59ca3f72926811e2ba9922000a1f9c9a_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage4.s3.amazonaws.com/2e548db0b5a011e2968922000a1fbe74_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage3.s3.amazonaws.com/8fc405729f9711e2b17a22000a1fa432_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage5.ak.instagram.com/17673070b8b211e2a58222000a1fb810_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage11.ak.instagram.com/59ca3f72926811e2ba9922000a1f9c9a_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage4.s3.amazonaws.com/2e548db0b5a011e2968922000a1fbe74_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage3.s3.amazonaws.com/8fc405729f9711e2b17a22000a1fa432_7.jpg' /></li>
+        <li class="FluidSlider-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
 
       </ul>
     </div>
@@ -36,7 +36,7 @@
     <script src="../build/build.js"></script>
     <script>
         var slider = require('fluid-slider');
-        var el = document.getElementById('js-swipe');
+        var el = document.getElementById('js-FluidSlider');
         var breakpointItems = {
           0: 1,
           500: 2,
