--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="FluidSlider-container">
-      <ul id="js-FluidSlider" class="swipe-list">
+      <ul id="js-FluidSlider" class="FluidSlider-list">
         <li class="FluidSlider-item"><img src='http://distilleryimage5.ak.instagram.com/17673070b8b211e2a58222000a1fb810_7.jpg' /></li>
         <li class="FluidSlider-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
         <li class="FluidSlider-item"><img src='http://distilleryimage11.ak.instagram.com/59ca3f72926811e2ba9922000a1f9c9a_7.jpg' /></li>
