--- a/example/index.html
+++ b/example/index.html
@@ -7,23 +7,13 @@
   <body>
     <div class="FluidSlider-container">
       <ul id="js-FluidSlider" class="FluidSlider-list">
-        <li class="FluidSlider-item"><img src='http://distilleryimage5.ak.instagram.com/17673070b8b211e2a58222000a1fb810_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage11.ak.instagram.com/59ca3f72926811e2ba9922000a1f9c9a_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage4.s3.amazonaws.com/2e548db0b5a011e2968922000a1fbe74_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage3.s3.amazonaws.com/8fc405729f9711e2b17a22000a1fa432_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage5.ak.instagram.com/17673070b8b211e2a58222000a1fb810_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage11.ak.instagram.com/59ca3f72926811e2ba9922000a1f9c9a_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage4.s3.amazonaws.com/2e548db0b5a011e2968922000a1fbe74_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage3.s3.amazonaws.com/8fc405729f9711e2b17a22000a1fa432_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage5.ak.instagram.com/17673070b8b211e2a58222000a1fb810_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage11.ak.instagram.com/59ca3f72926811e2ba9922000a1f9c9a_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage4.s3.amazonaws.com/2e548db0b5a011e2968922000a1fbe74_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage3.s3.amazonaws.com/8fc405729f9711e2b17a22000a1fa432_7.jpg' /></li>
-        <li class="FluidSlider-item"><img src='http://distilleryimage2.ak.instagram.com/d69613d2b81011e2af7822000a1fb04e_7.jpg' /></li>
-
+        <li class="FluidSlider-item"><img src='https://drscdn.500px.org/photo/230633797/m%3D900/v2?webp=true&sig=07669af341b8fc2c2c2036c7e2437e9ecb0f3d9013b8d4b0732f121f534b4954' alt='Destination Sky von Red Bull Photography auf 500px.com'></li>
+        <li class="FluidSlider-item"><img src='https://drscdn.500px.org/photo/230545777/m%3D900/v2?webp=true&sig=7a6d130f17ca4b77a2a2f0aab0db7808e0ab383904588bc713c2dd112413b5d8' alt='On the edge von Red Bull Photography auf 500px.com'></li>
+        <li class="FluidSlider-item"><img src='https://drscdn.500px.org/photo/230446979/m%3D900/v2?webp=true&sig=20de15fcad3ac306b24236a8a1b2ff39b738e013f5465c569cae1ae64b00e0fd' alt='Fist Bump von Red Bull Photography auf 500px.com'></li>
+        <li class="FluidSlider-item"><img src='https://drscdn.500px.org/photo/229958593/m%3D900/v2?webp=true&sig=4d8cc3fc0dbb812f7f0bf84fac71838c1ee108d5611640da2db25aca1d1e020b' alt='Frontside 360 von Red Bull Photography auf 500px.com'></li>
+        <li class="FluidSlider-item"><img src='https://drscdn.500px.org/photo/229761313/m%3D900/v2?webp=true&sig=68fe66e5949c1c85a87d106e11e2887863bdaa61649f164568757f523f53b1c2' alt='Bike Explosion von Red Bull Photography auf 500px.com'></li>
+        <li class="FluidSlider-item"> <img src='https://drscdn.500px.org/photo/229512037/m%3D900/v2?webp=true&sig=1fd6953957c3fa8c785750d732e6e7143cfc7e8aa9992b61af1760d017430ea8' alt='Conquer all elements von Red Bull Photography auf 500px.com'></li>
+        <li class="FluidSlider-item"><img src='https://drscdn.500px.org/photo/224924575/m%3D900/v2?webp=true&sig=e1abe59c9d3ad0255b6f33907a429fbe1a7ab5e43b6919556f70cc6be6283dd4' alt='Gravel pit von Red Bull Photography auf 500px.com'></li>
       </ul>
     </div>
 
